--- a/src/Full/Components/start/start.module.css
+++ b/src/Full/Components/start/start.module.css
@@ -324,6 +324,13 @@
 }
 
 
+@media (max-width: 430px) {
+    .header{
+        width: 120%;
+    }
+}
+
+
 @media (max-width: 400px) {
     .header{
         width: 118%;
