--- a/src/Full/Components/start/start.module.css
+++ b/src/Full/Components/start/start.module.css
@@ -6,6 +6,9 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
+    /* position: fixed;
+    top: 0;
+    z-index: 10; */
 }
 
 
@@ -93,6 +96,7 @@
     align-items: center;
     margin-top: 10px;
     background-color: rgb(128, 128, 128, 0.1);
+
 } 
 .menuBtnPk1{
     border-radius: 30px 30px 0 0;
@@ -105,12 +109,10 @@
 
 /* кнопка закрыть в окне */
 .windowBtn{
-    
     width: 70%;
     height: 50px;
     font-size: 20px;
     border-radius: 30px;
-
     background-color: rgb(128, 128, 128, 0.1);
 }
 
